# ezansi-platform-core

./: .coverage  .gitignore  Containerfile  LICENSE  README.md  REPOSITORY_SUMMARY.md  THE_STORY_OF_THIS_REPO.md  podman-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: tests.yml
capabilities/: catalog.yml
capabilities/chromadb-retrieval/: capability.json
capabilities/ollama-llm/: capability.json
capabilities/piper-tts/: capability.json
config/: device-constraints-pi5-16gb.json  device-constraints-pi5-4gb.json  device-constraints-pi5-8gb.json  device-constraints.json  overrides.yaml
docs/: README.md  api-gateway.md  architecture.md  blueprint-runner.md  capability-registry.md  cold-start-walkthrough.md  deployment-guide.md  request-router.md  resource-validator.md  stack-composition.md
docs/decisions/: 0001-blueprint-runner.md  0002-proxy-non-json-responses-and-tts-audio.md  0003-local-dev-stack-reachability-and-timeouts.md
docs/phase-2-architecture/: README.md  api-gateway.md  capability-registry.md  request-router.md  resource-validator.md  stack-composition.md
examples/: stack-student-rag.yml
scripts/: health-check.sh  smoke-test.sh
src/ezansi_platform_core/: __main__.py  app.py  contracts.py  overrides.py  registry.py  router.py  settings.py  validator.py
src/ezansi_platform_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: IMPLEMENTATION_SUMMARY.md  TEST_GUIDE.md  __init__.py  conftest.py
tests/e2e/: test_pi5_hardware.py  (+1 more)
(+7 files in other folders)
