[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezansi-platform-core"
version = "0.1.0"
description = "The stable, reusable foundation for the ezAnsi AI edge computing platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "pydantic==2.10.4",
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
test = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "e2e: End-to-end integration tests",
    "unit: Unit tests",
    "scenario: Role-based scenario tests",
    "hardware: Hardware-specific tests (requires specific device)",
    "slow: Tests that take longer to run",
]
